<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>keymint_package</name>
  <version>0.0.3</version>
  <description>The parser for the manifest files in the keymint buildsystem.</description>
  <maintainer email="ruffin@osrfoundation.org">Ruffin White</maintainer>
  <license>Apache License 2.0</license>

  <depend>python3-attrdict</depend>
  <depend>python3-setuptools</depend>
  <depend>python3-xmlschema</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
